<resources>
    <string name="app_name">GoParty</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="no_text"> </string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in">Login</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="profile_name">Induce Smile</string>
    <string name="country_location">Sweden</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_party_nearby">Party Nearby</string>
    <string name="menu_find_party">Find party</string>
    <string name="menu_host_party">Host a party</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_names">Display name</string>
    <string name="induce_smile">Induce Smile</string>

    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_country">Country</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="select_date">Date</string>
    <string name="save_edit">Save edit</string>


    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Classical</string>
    <string name="slide_1_desc">Looking for popular parties?</string>
    <string name="slide_2_title">Popular</string>
    <string name="slide_2_desc">Here are lots of parties resources</string>
    <string name="slide_3_title">The latest</string>
    <string name="slide_4_desc">Discover the party and enjoy it!</string>
    <string name="slide_4_title">The latest</string>
    <string name="slide_3_desc">Discover the party and enjoy it!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <string name="theme_prompt">Choose a theme</string>
    <string-array name="theme_arrays">
        <item>Birthday</item>
        <item>Wedding</item>
        <item>Graduation</item>
        <item>Festival</item>
        <item>Others</item>
    </string-array>

    <string name="size_prompt">Choose size</string>
    <string-array name="size_arrays">
        <item>3 - 4</item>
        <item>6 - 8</item>
        <item>9 - 12</item>
        <item>12 - 18</item>
        <item>19 - 30</item>
        <item>30 - 60</item>
        <item>60 or more</item>
    </string-array>

</resources>
